# fem-rs

./: .gitignore  .gitmodules  ASSEMBLY_CRATE_ANALYSIS.md  C1_BACKEND_CONTRACT_FREEZE.md  COEFFICIENT_ARCHITECTURE.md  COEFFICIENT_QUICK_REFERENCE.md  COEFFICIENT_SEARCH_INDEX.md  COEFFICIENT_TYPES_SEARCH.md  Cargo.toml  DESIGN_PLAN.md  EXPLORATION_REPORT.md  LINGER_UPDATE_ASSESSMENT.md  LINGER_UPDATE_COMPLETION_SUMMARY.md  MAXWELL_GAPS.md  MFEM_ALIGNMENT_TRACKER.md  MFEM_MAPPING.md  PARALLEL_ARCHITECTURE.md  PARALLEL_ARCHITECTURE_VISUAL.md  PARALLEL_INFRASTRUCTURE_SUMMARY.txt  PERFORMANCE_EXECUTIVE_SUMMARY.md  PERFORMANCE_IMPLEMENTATION_GUIDE.md  PERFORMANCE_OPTIMIZATION_ROADMAP.md  PHASE1_OPTIMIZATION_COMPLETION.md  README.md  REMAINING_FEATURES.md  REMAINING_QUICK_REFERENCE.txt  SESSION_2026_05_04_SUMMARY.md  TECHNICAL_SPEC.md
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: alignment-smoke.yml  backend-feature-matrix.yml  ci.yml  hpc-scaling-gate.yml  io-parity-hdf5.yml  mfem-examples-smoke.yml
crates/amg/: Cargo.toml
crates/amg/src/: lib.rs
crates/amg/tests/: poisson_amg.rs
crates/assembly/: Cargo.toml
crates/assembly/src/: assembler.rs  backend.rs  coefficient.rs  complex.rs  dg.rs  dg_elasticity.rs  discrete_op.rs  grid_function.rs  hyperbolic.rs  iga.rs  integrator.rs  lib.rs  mixed.rs  nonlinear.rs  partial.rs  postprocess.rs  static_cond.rs  transfer.rs  vector_assembler.rs  vector_boundary.rs  vector_integrator.rs
crates/assembly/src/reed/: context.rs  hcurl.rs  mod.rs  qfunction.rs  restriction.rs
crates/assembly/src/standard/: boundary_flux.rs  boundary_mass.rs  convection.rs  curl_curl.rs  diffusion.rs  elasticity.rs  grad_div.rs  mass.rs  mod.rs  neumann.rs  source.rs  sum.rs  tangential_boundary.rs  transpose.rs  vector_convection.rs  vector_diffusion.rs  vector_mass.rs  vector_source.rs
crates/assembly/tests/: mixed_mesh.rs  poisson.rs
crates/benches/: Cargo.toml  README.md  amg.rs  assembly.rs  mesh.rs  micro.rs  solver.rs
crates/ceed/: Cargo.toml
crates/ceed/src/: context.rs  lib.rs  qfunction.rs
crates/core/src/: scalar.rs
crates/element/src/: lib.rs  nurbs.rs  quadrature.rs  reference.rs  tri6_geom.rs
crates/element/src/lagrange/: hex.rs  mod.rs  quad.rs  (+3 more)
crates/element/tests/: element_tests.rs
crates/io/: Cargo.toml
crates/io/src/: abaqus.rs  gmsh.rs  hdf5.rs  lib.rs  matrix_market.rs  netgen.rs  vtk.rs  vtk_reader.rs  xdmf.rs
crates/io/tests/: io_integration.rs
crates/io/tests/fixtures/: mixed_c3d4_c3d8.inp  mixed_tet_hex.vol  unit_square.msh  unit_tet.inp  unit_tet.vol
crates/io_hdf5_parallel/: Cargo.toml  README.md
crates/io_hdf5_parallel/src/: hdf5_rust_impl.rs  lib.rs
crates/linalg/: Cargo.toml
crates/linalg-gpu/: Cargo.toml
crates/linalg-gpu/src/: buffer.rs  context.rs  csr.rs  lib.rs  spmv.wgsl  spmv_pipeline.rs  vector.rs  vector_ops.wgsl  vector_pipeline.rs
crates/linalg-gpu/tests/: spmv_test.rs  vector_ops_test.rs
crates/linalg/src/: complex_csr.rs  coo.rs  csr.rs  dense.rs  hmatrix.rs  lib.rs  pool.rs  sparsity.rs  vector.rs
crates/linalg/tests/: linalg_tests.rs
crates/mesh/: Cargo.toml
crates/mesh/src/: amr.rs  boundary.rs  curved.rs  lib.rs  lor.rs  moving_mesh.rs  point_locator.rs  simplex.rs  submesh.rs  transformation.rs
crates/mesh/tests/: mesh_tests.rs
crates/parallel/: Cargo.toml
crates/parallel/src/: checkpoint.rs  comm.rs  dof_partition.rs  env.rs  ghost.rs  lib.rs  mesh_serde.rs  metis.rs  mpi_test_env.rs  par_amg.rs  par_amr.rs  par_assembler.rs  par_csr.rs  par_hdf5.rs  par_mesh.rs  par_mixed_assembler.rs  par_ras.rs  par_simplex.rs  par_solver.rs  par_space.rs  par_vector.rs  par_vector_assembler.rs  partition.rs
crates/parallel/src/backend/: channel.rs  mod.rs  native.rs  wasm.rs
crates/parallel/src/launcher/: mod.rs  native.rs  wasm.rs
crates/parallel/tests/: local_rayon_min_env.rs  ras_benchmark.rs  thread_launcher.rs
crates/solver/: Cargo.toml
crates/solver/src/: block.rs  block_gmres.rs  cg_gpu.rs  eigen.rs  gmres_gpu.rs  lib.rs  lor.rs  multiphysics.rs  multiphysics_sync.rs  multiphysics_templates.rs  multirate.rs  ode.rs  sli.rs
crates/solver/tests/: cg_gpu_test.rs  operator_bicgstab.rs  operator_cg.rs  poisson_solve.rs
crates/space/: Cargo.toml
crates/space/src/: constraints.rs  dof_manager.rs  fe_space.rs  h1.rs  h1_trace.rs  hcurl.rs  hdiv.rs  l2.rs  lib.rs  restricted_hcurl.rs  skeleton.rs  vector_h1.rs
crates/space/tests/: space_tests.rs
crates/wasm/: .gitignore  Cargo.toml
crates/wasm/e2e/: index.html  test.mjs
crates/wasm/src/: lib.rs  par_solver.rs  solver.rs
docs/: crate-improvement-plan-2026-05-04.md  dealii-kpi-benchmark-plan-2026-04-19.md  mfem-6week-plan-estimates.md  mfem-baseline-snapshot-2026-04-18.md  mfem-parity-matrix-template.md  mfem-w2-io-ci-backfill-template.md  mfem-w2-io-kickoff-2026-04-18.md  mfem-w2-io-local-report-2026-04-18.md  ras-ddm-status-2026-04-19.md
docs/baselines/: ras_scaling_baseline.csv  template_kpi_baseline.csv
examples/: Cargo.toml  ceed_mass.rs  debug_interp.rs  debug_single.rs  ex10_heat_equation.rs  ex10_wave_equation.rs  ex14_dc_current.rs  ex15_dg_amr.rs  ex15_dynamic_amr.rs  ex15_tet_nc_amr.rs  ex17_dg_elasticity.rs  ex18_euler.rs  ex1_poisson.rs  ex25_pml.rs  ex26_geom_mg.rs  ex2_elasticity.rs  ex31_maxwell.rs  ex32_impedance_maxwell.rs  ex33_tangential_drive_maxwell.rs  ex34_absorbing_maxwell.rs  ex39_named_attributes.rs  ex3_hex8_maxwell.rs  ex3_maxwell.rs  ex41_imex.rs  ex43_hdf5_checkpoint.rs  ex4_darcy.rs  ex5_mixed_darcy.rs  ex7_neumann_mixed_bc.rs  ex9_dg_advection.rs  ex_convergence.rs  ex_maxwell_eigenvalue.rs  ex_maxwell_firstorder.rs  ex_maxwell_time.rs  ex_navier_stokes.rs  ex_stokes.rs  mfem_dpg_poisson.rs  mfem_ex10_heat_equation.rs  mfem_ex10_maxwell_time.rs  mfem_ex10_wave_equation.rs  mfem_ex13.rs  (+60 more)
examples/src/: lib.rs  maxwell.rs  template_runner.rs
scripts/: check_ras_scaling_csv.ps1  check_template_kpi_csv.ps1  complete_pm001_after_ci.ps1  run_io_parity_hdf5.ps1  run_mfem_examples.ps1  run_pm001_ci_and_backfill.ps1  run_template_kpi_sweep.ps1
(+13 files in other folders)
