[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/mesh",
    "crates/element",
    "crates/space",
    "crates/assembly",
    "crates/linalg",
    "crates/solver",
    "crates/amg",
    "crates/parallel",
    "crates/io",
    "crates/wasm",
    "crates/ceed",        # bridge: fem-rs ↔ reed (libCEED analogue)
    "crates/benches",
    "examples",
]
# reed/linger live in vendor as git submodules and are their own Cargo workspaces.
# Exclude them so Cargo does not try to merge workspace graphs.
exclude = ["vendor/reed", "vendor/linger"]

[workspace.dependencies]
# shared versions — reference from crates with { workspace = true }
nalgebra    = "0.33"
num-traits  = "0.2"
thiserror   = "2"
log         = "0.4"
rayon       = "1.10"
serde       = { version = "1", features = ["derive"] }
bytemuck    = { version = "1", features = ["derive"] }
env_logger  = "0.11"
# rsmpi — Rust MPI bindings (crates.io package name: `mpi`)
# Used by fem-parallel; feature-gated so builds without MPI remain possible.
mpi         = { version = "0.8", features = ["user-operations"] }
criterion   = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level   = 3
lto         = "thin"
codegen-units = 1

[profile.release.package.fem-wasm]
opt-level   = "s"   # size-optimize wasm
