[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/mesh",
    "crates/element",
    "crates/space",
    "crates/assembly",
    "crates/linalg",
    "crates/solver",
    "crates/amg",
    "crates/parallel",
    "crates/io",
    "crates/io_hdf5_parallel",
    "crates/wasm",
    "crates/benches",
    "examples",
]

[workspace.dependencies]
# shared versions — reference from crates with { workspace = true }
nalgebra    = "0.33"
num-traits  = "0.2"
thiserror   = "2"
log         = "0.4"
rayon       = "1.10"
serde       = { version = "1", features = ["derive"] }
bytemuck    = { version = "1", features = ["derive"] }
env_logger  = "0.11"
# rsmpi — Rust MPI bindings (crates.io package name: `mpi`)
# Used by fem-parallel; feature-gated so builds without MPI remain possible.
mpi         = { version = "0.8", features = ["user-operations"] }
criterion   = { version = "0.5", features = ["html_reports"] }
jsmpi       = "0.1"
# rem-rs/reed (libCEED-style discretization); git pin — bump `rev` when upgrading.
reed        = { git = "https://github.com/rem-rs/reed.git", rev = "11eaaed88aaa4c9aebb3da10c8c10833824ab865", package = "reed", default-features = false }
reed-core   = { git = "https://github.com/rem-rs/reed.git", rev = "11eaaed88aaa4c9aebb3da10c8c10833824ab865", package = "reed-core" }
reed-cpu    = { git = "https://github.com/rem-rs/reed.git", rev = "11eaaed88aaa4c9aebb3da10c8c10833824ab865", package = "reed-cpu", default-features = false }

[profile.release]
opt-level   = 3
lto         = "fat"          # Fat LTO for better cross-crate optimization
codegen-units = 1

[profile.release.package.fem-wasm]
opt-level   = "s"   # size-optimize wasm
