[package]
name    = "fem-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
fem-core     = { path = "../crates/core" }
fem-mesh     = { path = "../crates/mesh" }
fem-linalg   = { path = "../crates/linalg" }
fem-io       = { path = "../crates/io" }
fem-parallel = { path = "../crates/parallel" }
fem-ceed     = { path = "../crates/ceed" }
fem-element  = { path = "../crates/element" }
fem-space    = { path = "../crates/space" }
fem-assembly = { path = "../crates/assembly" }
fem-solver   = { path = "../crates/solver" }
log          = { workspace = true }
env_logger   = { workspace = true }

[[example]]
name = "em_electrostatics"
path = "em_electrostatics.rs"

[[example]]
name = "em_magnetostatics_2d"
path = "em_magnetostatics_2d.rs"

[[example]]
name = "par_mesh_verify"
path = "par_mesh_verify.rs"

[[example]]
name = "ceed_mass"
path = "ceed_mass.rs"

[[example]]
name = "ex1_poisson"
path = "ex1_poisson.rs"

[[example]]
name = "ex2_elasticity"
path = "ex2_elasticity.rs"

[[example]]
name = "ex5_mixed_darcy"
path = "ex5_mixed_darcy.rs"

[[example]]
name = "debug_single"
path = "debug_single.rs"

[[example]]
name = "debug_interp"
path = "debug_interp.rs"

[[example]]
name = "ex3_maxwell"
path = "ex3_maxwell.rs"

[[example]]
name = "ex9_dg_advection"
path = "ex9_dg_advection.rs"

[[example]]
name = "ex10_heat_equation"
path = "ex10_heat_equation.rs"

[[example]]
name = "ex10_wave_equation"
path = "ex10_wave_equation.rs"

[[example]]
name = "ex13_eigenvalue"
path = "ex13_eigenvalue.rs"

[[example]]
name = "ex4_darcy"
path = "ex4_darcy.rs"

[[example]]
name = "ex15_dg_amr"
path = "ex15_dg_amr.rs"

[[example]]
name = "ex15_tet_nc_amr"
path = "ex15_tet_nc_amr.rs"

[[example]]
name = "ex16_nonlinear_heat"
path = "ex16_nonlinear_heat.rs"

[[example]]
name = "pex1_poisson"
path = "pex1_poisson.rs"

[[example]]
name = "pex2_mixed_darcy"
path = "pex2_mixed_darcy.rs"

[[example]]
name = "pex3_maxwell"
path = "pex3_maxwell.rs"

[[example]]
name = "pex5_darcy"
path = "pex5_darcy.rs"

[[example]]
name = "ex_stokes"
path = "ex_stokes.rs"

[[example]]
name = "ex_navier_stokes"
path = "ex_navier_stokes.rs"

[[example]]
name = "ex7_neumann_mixed_bc"
path = "ex7_neumann_mixed_bc.rs"

[[example]]
name = "ex14_dc_current"
path = "ex14_dc_current.rs"

[[example]]
name = "pex4_parallel_heat"
path = "pex4_parallel_heat.rs"

[[example]]
name = "ex_convergence"
path = "ex_convergence.rs"

[lib]
name = "fem_examples"
path = "src/lib.rs"
