[package]
name    = "fem-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
fem-core     = { path = "../crates/core" }
fem-mesh     = { path = "../crates/mesh" }
fem-linalg   = { path = "../crates/linalg" }
fem-io       = { path = "../crates/io" }
fem-parallel = { path = "../crates/parallel" }
fem-ceed     = { path = "../crates/ceed" }
fem-element  = { path = "../crates/element" }
fem-space    = { path = "../crates/space" }
fem-assembly = { path = "../crates/assembly" }
fem-solver   = { path = "../crates/solver" }
fem-amg      = { path = "../crates/amg" }
fem-io-hdf5-parallel = { path = "../crates/io_hdf5_parallel" }
nalgebra     = { workspace = true }
log          = { workspace = true }
env_logger   = { workspace = true }

[[example]]
name = "em_electrostatics"
path = "em_electrostatics.rs"

[[example]]
name = "em_magnetostatics_2d"
path = "em_magnetostatics_2d.rs"

[[example]]
name = "par_mesh_verify"
path = "par_mesh_verify.rs"

[[example]]
name = "ceed_mass"
path = "ceed_mass.rs"

[[example]]
name = "ex1_poisson"
path = "ex1_poisson.rs"

[[example]]
name = "ex2_elasticity"
path = "ex2_elasticity.rs"

[[example]]
name = "ex5_mixed_darcy"
path = "ex5_mixed_darcy.rs"

[[example]]
name = "debug_single"
path = "debug_single.rs"

[[example]]
name = "debug_interp"
path = "debug_interp.rs"

[[example]]
name = "ex3_hex8_maxwell"
path = "ex3_hex8_maxwell.rs"

[[example]]
name = "ex9_dg_advection"
path = "ex9_dg_advection.rs"

[[example]]
name = "ex10_heat_equation"
path = "ex10_heat_equation.rs"

[[example]]
name = "ex10_wave_equation"
path = "ex10_wave_equation.rs"

[[example]]
name = "ex4_darcy"
path = "ex4_darcy.rs"

[[example]]
name = "ex15_dg_amr"
path = "ex15_dg_amr.rs"

[[example]]
name = "ex15_tet_nc_amr"
path = "ex15_tet_nc_amr.rs"

[[example]]
name = "ex15_dynamic_amr"
path = "ex15_dynamic_amr.rs"

[[example]]
name = "ex17_dg_elasticity"
path = "ex17_dg_elasticity.rs"

[[example]]
name = "ex18_euler"
path = "ex18_euler.rs"

[[example]]
name = "ex16_nonlinear_heat"
path = "ex16_nonlinear_heat.rs"

[[example]]
name = "pex1_poisson"
path = "pex1_poisson.rs"

[[example]]
name = "pex2_mixed_darcy"
path = "pex2_mixed_darcy.rs"

[[example]]
name = "pex3_maxwell"
path = "pex3_maxwell.rs"

[[example]]
name = "pex5_darcy"
path = "pex5_darcy.rs"

[[example]]
name = "mfem_ex40"
path = "mfem_ex40.rs"

[[example]]
name = "mfem_ex19"
path = "mfem_ex19.rs"

[[example]]
name = "ex7_neumann_mixed_bc"
path = "ex7_neumann_mixed_bc.rs"

[[example]]
name = "mfem_ex10_maxwell_time"
path = "mfem_ex10_maxwell_time.rs"

[[example]]
name = "ex33_tangential_drive_maxwell"
path = "ex33_tangential_drive_maxwell.rs"

[[example]]
name = "ex39_named_attributes"
path = "ex39_named_attributes.rs"

[[example]]
name = "mfem_ex13_eigenvalue"
path = "mfem_ex13_eigenvalue.rs"

[[example]]
name = "mfem_ex33_fractional_laplacian"
path = "mfem_ex33_fractional_laplacian.rs"

[[example]]
name = "ex14_dc_current"
path = "ex14_dc_current.rs"

[[example]]
name = "pex4_parallel_heat"
path = "pex4_parallel_heat.rs"

[[example]]
name = "mfem_ex1_convergence"
path = "mfem_ex1_convergence.rs"

[[example]]
name = "ex26_geom_mg"
path = "ex26_geom_mg.rs"

[[example]]
name = "ex41_imex"
path = "ex41_imex.rs"

[[example]]
name = "ex43_hdf5_checkpoint"
path = "ex43_hdf5_checkpoint.rs"

[[example]]
name = "mfem_ex3_firstorder"
path = "mfem_ex3_firstorder.rs"

[[example]]
name = "mfem_ex3"
path = "mfem_ex3.rs"

[[example]]
name = "mfem_ex8_hybridization"
path = "mfem_ex8_hybridization.rs"

[[example]]
name = "mfem_ex13"
path = "mfem_ex13.rs"

[[example]]
name = "mfem_ex36_obstacle"
path = "mfem_ex36_obstacle.rs"

[[example]]
name = "mfem_ex37_topology_optimization"
path = "mfem_ex37_topology_optimization.rs"

[[example]]
name = "mfem_ex38_immersed_boundary"
path = "mfem_ex38_immersed_boundary.rs"

[[example]]
name = "mfem_dpg_poisson"
path = "mfem_dpg_poisson.rs"

[[example]]
name = "mfem_surface_fem"
path = "mfem_surface_fem.rs"

[[example]]
name = "mfem_tmop_mesh_quality"
path = "mfem_tmop_mesh_quality.rs"

[[example]]
name = "mfem_ex22"
path = "mfem_ex22.rs"

[[example]]
name = "mfem_ex25"
path = "mfem_ex25.rs"

[[example]]
name = "mfem_ex31"
path = "mfem_ex31.rs"

[[example]]
name = "mfem_ex32"
path = "mfem_ex32.rs"

[[example]]
name = "mfem_ex34"
path = "mfem_ex34.rs"

[[example]]
name = "mfem_volta"
path = "mfem_volta.rs"

[[example]]
name = "mfem_tesla"
path = "mfem_tesla.rs"

[[example]]
name = "mfem_maxwell"
path = "mfem_maxwell.rs"

[[example]]
name = "mfem_joule"
path = "mfem_joule.rs"

[lib]
name = "fem_examples"
path = "src/lib.rs"
