[package]
name    = "fem-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
fem-core     = { path = "../crates/core" }
fem-mesh     = { path = "../crates/mesh" }
fem-linalg   = { path = "../crates/linalg" }
fem-io       = { path = "../crates/io" }
fem-parallel = { path = "../crates/parallel" }
fem-element  = { path = "../crates/element" }
fem-space    = { path = "../crates/space" }
fem-assembly = { path = "../crates/assembly" }
fem-solver   = { path = "../crates/solver" }
fem-amg      = { path = "../crates/amg" }
fem-io-hdf5-parallel = { path = "../crates/io_hdf5_parallel" }
nalgebra     = { workspace = true }
log          = { workspace = true }
env_logger   = { workspace = true }

[[example]]
name = "mfem_ex1_poisson"
path = "mfem_ex1_poisson.rs"

[[example]]
name = "mfem_ex2_elasticity"
path = "mfem_ex2_elasticity.rs"

[[example]]
name = "mfem_ex5_mixed_darcy"
path = "mfem_ex5_mixed_darcy.rs"

# One-to-one MFEM example targets only: mfem_ex* and mfem_pex*.

[[example]]
name = "mfem_ex9_dg_advection"
path = "mfem_ex9_dg_advection.rs"

[[example]]
name = "mfem_ex10_heat_equation"
path = "mfem_ex10_heat_equation.rs"

[[example]]
name = "mfem_ex10_wave_equation"
path = "mfem_ex10_wave_equation.rs"

[[example]]
name = "mfem_ex4_darcy"
path = "mfem_ex4_darcy.rs"

[[example]]
name = "mfem_ex15_dg_amr"
path = "mfem_ex15_dg_amr.rs"

[[example]]
name = "mfem_ex15_tet_nc_amr"
path = "mfem_ex15_tet_nc_amr.rs"

[[example]]
name = "mfem_ex15_dynamic_amr"
path = "mfem_ex15_dynamic_amr.rs"

[[example]]
name = "mfem_ex17_dg_elasticity"
path = "mfem_ex17_dg_elasticity.rs"

[[example]]
name = "mfem_ex18_euler"
path = "mfem_ex18_euler.rs"

[[example]]
name = "mfem_ex16_nonlinear_heat"
path = "mfem_ex16_nonlinear_heat.rs"

[[example]]
name = "mfem_pex1_poisson"
path = "mfem_pex1_poisson.rs"

[[example]]
name = "mfem_pex2_mixed_darcy"
path = "mfem_pex2_mixed_darcy.rs"

[[example]]
name = "mfem_pex3_maxwell"
path = "mfem_pex3_maxwell.rs"

[[example]]
name = "mfem_pex5_darcy"
path = "mfem_pex5_darcy.rs"

[[example]]
name = "mfem_ex40"
path = "mfem_ex40.rs"

[[example]]
name = "mfem_ex19"
path = "mfem_ex19.rs"

[[example]]
name = "mfem_ex7_neumann_mixed_bc"
path = "mfem_ex7_neumann_mixed_bc.rs"

[[example]]
name = "mfem_ex10_maxwell_time"
path = "mfem_ex10_maxwell_time.rs"

[[example]]
name = "mfem_ex33_tangential_drive_maxwell"
path = "mfem_ex33_tangential_drive_maxwell.rs"

[[example]]
name = "mfem_ex39_named_attributes"
path = "mfem_ex39_named_attributes.rs"

[[example]]
name = "mfem_ex13_eigenvalue"
path = "mfem_ex13_eigenvalue.rs"

[[example]]
name = "mfem_ex46_moving_mesh_heat"
path = "mfem_ex46_moving_mesh_heat.rs"

[[example]]
name = "mfem_ex47_multiphysics_templates"
path = "mfem_ex47_multiphysics_templates.rs"

[[example]]
name = "mfem_ex48_template_joule_heating"
path = "mfem_ex48_template_joule_heating.rs"

[[example]]
name = "mfem_ex49_template_fsi"
path = "mfem_ex49_template_fsi.rs"

[[example]]
name = "mfem_ex50_template_acoustics_structure"
path = "mfem_ex50_template_acoustics_structure.rs"

[[example]]
name = "mfem_ex51_template_em_thermal_stress"
path = "mfem_ex51_template_em_thermal_stress.rs"

[[example]]
name = "mfem_ex52_template_reaction_flow_thermal"
path = "mfem_ex52_template_reaction_flow_thermal.rs"

[[example]]
name = "mfem_ex53_3d_electrothermal"
path = "mfem_ex53_3d_electrothermal.rs"

[[example]]
name = "mfem_ex33_fractional_laplacian"
path = "mfem_ex33_fractional_laplacian.rs"

[[example]]
name = "mfem_ex14_dc_current"
path = "mfem_ex14_dc_current.rs"

[[example]]
name = "mfem_pex4_parallel_heat"
path = "mfem_pex4_parallel_heat.rs"

[[example]]
name = "mfem_ex26_geom_mg"
path = "mfem_ex26_geom_mg.rs"

[[example]]
name = "mfem_ex41_imex"
path = "mfem_ex41_imex.rs"

[[example]]
name = "mfem_ex43_hdf5_checkpoint"
path = "mfem_ex43_hdf5_checkpoint.rs"

[[example]]
name = "mfem_ex44_thermoelastic_coupled"
path = "mfem_ex44_thermoelastic_coupled.rs"

[[example]]
name = "mfem_ex45_moving_mesh_ale"
path = "mfem_ex45_moving_mesh_ale.rs"

[[example]]
name = "mfem_ex3"
path = "mfem_ex3.rs"

[[example]]
name = "mfem_ex8_hybridization"
path = "mfem_ex8_hybridization.rs"

[[example]]
name = "mfem_ex13"
path = "mfem_ex13.rs"

[[example]]
name = "mfem_ex36_obstacle"
path = "mfem_ex36_obstacle.rs"

[[example]]
name = "mfem_ex37_topology_optimization"
path = "mfem_ex37_topology_optimization.rs"

[[example]]
name = "mfem_ex38_immersed_boundary"
path = "mfem_ex38_immersed_boundary.rs"

[[example]]
name = "mfem_ex22"
path = "mfem_ex22.rs"

[[example]]
name = "mfem_ex25"
path = "mfem_ex25.rs"

[[example]]
name = "mfem_ex31"
path = "mfem_ex31.rs"

[[example]]
name = "mfem_ex32"
path = "mfem_ex32.rs"

[[example]]
name = "mfem_ex34"
path = "mfem_ex34.rs"

[[example]]
name = "mfem_tmop_mesh_quality"
path = "mfem_tmop_mesh_quality.rs"

[[example]]
name = "mfem_volta"
path = "mfem_volta.rs"

[[example]]
name = "mfem_tesla"
path = "mfem_tesla.rs"

[[example]]
name = "mfem_maxwell"
path = "mfem_maxwell.rs"

[[example]]
name = "mfem_joule"
path = "mfem_joule.rs"

[lib]
name = "fem_examples"
path = "src/lib.rs"

