[package]
name    = "fem-amg"
version = "0.1.0"
edition = "2021"

[dependencies]
fem-core   = { path = "../core" }
fem-linalg = { path = "../linalg" }
fem-solver = { path = "../solver" }
linger     = { path = "../../vendor/linger", default-features = false, features = ["rayon"] }
log        = { workspace = true }
thiserror  = { workspace = true }

[features]
default = []
hypre   = []          # placeholder — add hypre-sys when binding is ready

[dev-dependencies]
fem-assembly = { path = "../assembly" }
fem-element  = { path = "../element" }
fem-linalg   = { path = "../linalg" }
fem-mesh     = { path = "../mesh" }
fem-space    = { path = "../space" }
fem-solver   = { path = "../solver" }
