[package]
name    = "fem-amg"
version = "0.1.0"
edition = "2021"

[dependencies]
fem-core   = { path = "../core" }
fem-linalg = { path = "../linalg" }
fem-solver = { path = "../solver" }
linger     = { git = "https://github.com/rem-rs/linger.git", default-features = false, features = ["rayon"] }
log        = { workspace = true }
thiserror  = { workspace = true }

[features]
default = []

[dev-dependencies]
fem-assembly = { path = "../assembly" }
fem-element  = { path = "../element" }
fem-linalg   = { path = "../linalg" }
fem-mesh     = { path = "../mesh" }
fem-space    = { path = "../space" }
fem-solver   = { path = "../solver" }
