[package]
name    = "fem-assembly"
version = "0.1.0"
edition = "2021"

[dependencies]
fem-core    = { path = "../core" }
fem-mesh    = { path = "../mesh" }
fem-element = { path = "../element" }
fem-space   = { path = "../space" }
fem-linalg  = { path = "../linalg" }
fem-solver  = { path = "../solver" }
fem-amg     = { path = "../amg" }
nalgebra    = { workspace = true }
thiserror   = { workspace = true }
reed        = { workspace = true, optional = true }
reed-core   = { workspace = true, optional = true }
reed-cpu    = { workspace = true, optional = true }

[features]
default  = []
parallel = ["dep:rayon", "fem-linalg/parallel"]
reed     = ["dep:reed", "dep:reed-core", "dep:reed-cpu"]

[dependencies.rayon]
workspace = true
optional  = true

[dev-dependencies]
fem-linalg = { path = "../linalg" }
