[package]
name = "fem-benches"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
fem-core = { path = "../core" }
fem-mesh = { path = "../mesh" }
fem-element = { path = "../element" }
fem-space = { path = "../space" }
fem-assembly = { path = "../assembly" }
fem-linalg = { path = "../linalg" }
fem-solver = { path = "../solver" }
fem-amg = { path = "../amg" }
criterion = { workspace = true }

[features]
default = []
parallel = ["fem-assembly/parallel", "fem-linalg/parallel"]

[[bench]]
name = "assembly"
harness = false
path = "assembly.rs"

[[bench]]
name = "solver"
harness = false
path = "solver.rs"

[[bench]]
name = "amg"
harness = false
path = "amg.rs"

[[bench]]
name = "mesh"
harness = false
path = "mesh.rs"
