[package]
name    = "fem-io"
version = "0.1.0"
edition = "2021"

[dependencies]
fem-core   = { path = "../core" }
fem-linalg = { path = "../linalg" }
fem-mesh   = { path = "../mesh" }
linger     = { path = "../../vendor/linger" }
thiserror  = { workspace = true }
hdf5       = { version = "0.8", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
hdf5    = ["dep:hdf5"]
