[package]
name    = "fem-io"
version = "0.1.0"
edition = "2021"

[dependencies]
fem-core   = { path = "../core" }
fem-linalg = { path = "../linalg" }
fem-mesh   = { path = "../mesh" }
linger     = { git = "https://github.com/rem-rs/linger.git" }
thiserror  = { workspace = true }
rust-hdf5  = { version = "0.2", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
hdf5    = ["dep:rust-hdf5"]
