[package]
name = "fem-io-hdf5-parallel"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rmp-serde = "1"
rust-hdf5 = { version = "0.2", optional = true }
mpi = { workspace = true, optional = true }

[features]
default = []
hdf5 = ["dep:rust-hdf5"]
hdf5-mpi = ["hdf5", "dep:mpi"]
# Alias for `hdf5-mpi` (same dependency set).
phdf5 = ["hdf5-mpi"]
