[package]
name    = "fem-linalg-gpu"
version = "0.1.0"
edition = "2021"

[dependencies]
fem-core   = { path = "../core" }
fem-linalg = { path = "../linalg" }
bytemuck   = { workspace = true }
wgpu       = "27"
pollster   = "0.4"
thiserror  = "2"
log        = { workspace = true }

[lib]
crate-type = ["lib"]
