[package]
name    = "fem-linalg"
version = "0.1.0"
edition = "2021"

[dependencies]
fem-core   = { path = "../core" }
num-traits = { workspace = true }
bytemuck   = { workspace = true }
linger     = { git = "https://github.com/rem-rs/linger.git", optional = true }
parking_lot = "0.12"  # Thread-safe pool for COO buffers

[dev-dependencies]
# CooMatrix is used in CSR tests


[features]
default  = []
parallel = ["dep:rayon"]
direct   = ["dep:linger"]

[dependencies.rayon]
workspace = true
optional  = true
