[package]
name    = "fem-solver"
version = "0.1.0"
edition = "2021"

[dependencies]
fem-core   = { path = "../core" }
fem-linalg = { path = "../linalg" }
nalgebra   = { workspace = true }
linger     = { path = "../../vendor/linger", default-features = false, features = ["rayon"] }
log        = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
fem-assembly = { path = "../assembly" }
fem-element  = { path = "../element" }
fem-linalg   = { path = "../linalg" }
fem-mesh     = { path = "../mesh" }
fem-space    = { path = "../space" }
nalgebra-sparse = "0.4"
