[package]
name    = "fem-solver"
version = "0.1.0"
edition = "2021"

[dependencies]
fem-core   = { path = "../core" }
fem-linalg = { path = "../linalg" }
nalgebra   = { workspace = true }
linger     = { git = "https://github.com/rem-rs/linger.git", default-features = false, features = ["rayon"] }
log        = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
fem-assembly = { path = "../assembly" }
fem-element  = { path = "../element" }
fem-linalg   = { path = "../linalg" }
fem-mesh     = { path = "../mesh" }
fem-space    = { path = "../space" }
nalgebra-sparse = "0.4"

[features]
default  = []
gpu      = ["dep:fem-linalg-gpu", "dep:wgpu", "dep:bytemuck"]

[dependencies.fem-linalg-gpu]
path = "../linalg-gpu"
optional = true

[dependencies.wgpu]
version = "27"
optional = true

[dependencies.bytemuck]
workspace = true
optional = true
